# gql_api

./: Cargo.toml  Dockerfile  README.md
migrations/posts/: up.sql
src/: lib.rs  main.rs  schemas.rs
src/models/: post.rs
src/schemas/: post.rs
src/services/: post.rs
