[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"

async-graphql = { version = "2.10.1", features = ["dataloader"] }
async-graphql-actix-web = "2.10.1"

diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
strum = "0.21.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

[dev-dependencies]
jsonpath_lib = "0.3.0"
testcontainers = "0.12.0"